--- a/events.html
+++ b/events.html
@@ -18,7 +18,7 @@
       <a href="publications.html">Publications</a>
       <a href="projects.html">Projects/Students</a>
       <a href="teaching.html">Teaching</a>
-      <a href="invitedtalks.html">Invited Talks</a>
+      <a href="invitedtalks.html">Invited Talks/Lectures</a>
       <a href="cv-bio.html">CV and Bio</a>
       <a class="active" href="events.html">Events</a>
       <a href="media.html">Media</a>
@@ -580,7 +580,7 @@
 
       <div class="event-links">
         <a class="btn-link"
-           href="https://www.europeancoatingsymposium.org/"
+           href="https://www.european-coating-symposium.eu/ecs2021.html"
            target="_blank" rel="noopener">
           Event website
         </a>
@@ -639,7 +639,7 @@
           Course &amp; book website
         </a>
         <a class="btn-link"
-           href="https://www.datadrivenfluidmechanics.com/videos"
+           href="https://www.datadrivenfluidmechanics.com/index.php/lectures-videos"
            target="_blank" rel="noopener">
           Lecture videos
         </a>
