--- a/projects.html
+++ b/projects.html
@@ -33,14 +33,20 @@
 <main class="container">
   <article class="content">
 
-    <h1>Ongoing Projects and Students</h1>
+    <h1>Projects and Students</h1>
 
-    <p>
-      I supervise PhD and Master students working on experimental fluid mechanics,
-      data-driven modeling, flow control, cryogenics, and machine learning for engineering
-      systems. Projects are conducted at the von Karman Institute for Fluid Dynamics (VKI)
-      and in collaboration with several European universities and research centers.
-    </p>
+<p>
+  My team is composed of a diverse group of researchers focused on experimental fluid mechanics, 
+  data-driven modeling, flow control, cryogenics, and machine learning for engineering systems. 
+  Our projects are primarily built around the thesis work of our students at the 
+  <a href="https://www.vki.ac.be/index.php/academics" target="_blank">von Karman Institute (VKI)</a>, 
+  encompassing three distinct tracks: <strong>PhD candidates</strong> (both in-house and visiting), 
+  postgraduate <strong>Research Master students</strong>, and participants in the 
+  <strong>Short Training Program</strong>. This latter track is specifically designed for 
+  Master’s students from across Europe who join us for three to six months to complete their 
+  degree thesis under our co-supervision. All research is conducted at VKI in close 
+  collaboration with a broad network of European universities and research centers.
+</p>
 
     <!-- ===================================================== -->
     <h2>PhD Students</h2>
@@ -203,7 +209,7 @@
     <div class="phd-info">
       <strong>Fiore, M.</strong> (2019–2023)<br>
       <em>Thermal turbulence modelling for low Prandtl number fluid flows via data analysis and machine learning, PhD Thesis at UCL, Louvain University, Belgium.<br>
-          Co-supervised with Dr. L. Koloszar and Prof. Y. Bartosiewicz. Supported by FRIA and industrial projects. Supported by FRIA.
+          Co-supervised with Dr. L. Koloszar and Prof. Y. Bartosiewicz. Supported by FRIA and industrial projects.
     </div>
   </li>
 
@@ -214,7 +220,7 @@
     <div class="phd-info">
       <strong>Fiorini, D.</strong> (2019–2023)<br>
       <em>Gas-Liquid Interface Dynamics in Non-Isothermal Sloshing: Experimental Analysis and Simplified Modeling, PhD Thesis at KU Leuven University.<br>
-      co-supervised with Prof. D. Seveno and Prof. J. Steelant. Supported by FWO and industrial projects.
+      Co-supervised with Prof. D. Seveno and Prof. J. Steelant. Supported by FWO and industrial projects.
     </div>
   </li>
 
@@ -241,7 +247,7 @@
       <strong>Grasev, D.</strong> (visit in 2024)<br>
       <em>Nonlinear System Identification of Variable-Pitch Propellers Using a Wiener Model</em>.<br>
       PhD candidate at University of Defense, Brno, Czech Republic.<br>
-      Co-supervised with Prof. Pablo Salgado Sánchez.
+      Co-supervised with Prof. Jakub Hnidka.
     </div>
   </li>
  
@@ -537,7 +543,6 @@
 
   <li><strong>Saccaggi, E.</strong> (STP 2022). <em>Data-driven algebraic turbulent heat flux model (ANN)</em>.</li>
   <li><strong>Randino, S.</strong> (STP 2022). <em>Wind turbine control using machine learning</em>.</li>
-  <li><strong>Angieri, T.</strong> (STP 2022). <em>Adjoint-based ANN closures for LES</em>.</li>
   <li><strong>Bombardi, E.</strong> (STP 2022). <em>CFD–multibody coupling for flapping drones</em>.</li>
   <li><strong>Barucca, M.</strong> (STP 2022). <em>FSI solver for flexible flapping wings</em>.</li>
   <li><strong>Ferrigno, A.</strong> (STP 2022). <em>Spectral methods for the BLEW solver</em>.</li>
