minor corrections in events
minor corrections in events

--- a/events.html
+++ b/events.html
@@ -290,7 +290,7 @@
         <strong>SPICY</strong> (<em>Super-resolution and Pressure from Image veloCimetrY</em>)—the software we are developing at the
         <strong>von Karman Institute for Fluid Dynamics</strong> for meshless data assimilation from image-velocimetry data.
         Applications covered cryogenic sloshing (<strong>Pedro Afonso Marques</strong>), turbulent wetting (<strong>Damien Rigutto</strong>),
-        ensemble statistics in turbulent flows (<strong>Manuel Ratz</strong>), and meshless POD (<strong>Iacopo Tirelli</strong>, Experimental Aerodynamics and Propulsion Lab).
+        ensemble statistics in turbulent flows (<strong>Manuel Ratz</strong>), and meshless POD (<strong>Iacopo Tirelli</strong>, from UC3M).
       </p>
 
       <div class="event-links">
@@ -347,7 +347,7 @@
         Another successful edition of the <strong>VKI Lecture Series on Fluid Dynamics</strong> was held at the
         von Karman Institute for Fluid Dynamics. Featuring a comprehensive program of lectures, discussions,
         and demonstrations, the series brought together graduate students and experts to explore both
-        foundational and emerging topics in fluid mechanics.
+        foundational and emerging topics in experimental fluid mechanics.
       </p>
 
       <div class="event-links">
@@ -393,10 +393,6 @@
         and flow control problems.
       </p>
 
-      <p>
-        The week was characterized by long and demanding coding sessions,
-        fostering deep technical engagement and cross-disciplinary discussions.
-      </p>
 
       <div class="event-links">
         <a class="btn-link"
@@ -530,7 +526,7 @@
       </p>
 
       <p>
-        The program also featured dedicated laboratory demonstrations, expertly organized by
+        The program also featured dedicated laboratory demonstrations, led by
         Muhsin Can Akkurt and Misuki Okada, offering participants hands-on exposure
         to state-of-the-art experimental techniques.
       </p>
