--- a/join.html
+++ b/join.html
@@ -29,36 +29,116 @@
   </div>
 </header>
 
-<main class="container">
+<main class="container join-page">
   <article class="content">
-    <h1>Join us!</h1>
+    <h1>Join Us</h1>
 
-    <p>
-      We are always interested in motivated students and researchers with a
-      background in fluid dynamics, applied mathematics, or machine learning.
+    <p class="page-intro">
+      We currently have <strong>three openings</strong> for a <strong>Master’s thesis / internship</strong> project at the
+      <strong>von Karman Institute for Fluid Dynamics (VKI)</strong>. Projects are typically carried out within the
+      <strong>Erasmus program</strong>, with an ideal duration of <strong>4–6 months</strong>.
     </p>
 
-    <h2>Opportunities</h2>
-    <ul>
-      <li>PhD positions</li>
-      <li>Postdoctoral positions</li>
-      <li>Master’s thesis projects</li>
-      <li>Internships</li>
-    </ul>
-
-    <h2>How to apply</h2>
     <p>
-      Please contact me by email with:
+      <strong>How to apply:</strong> please contact
+      <a href="mailto:mendez@vki.ac.be">mendez@vki.ac.be</a>
+      and include your <strong>CV</strong> and <strong>transcript of records</strong>.
+      If possible, add a short paragraph about your background and indicate which topic(s) you are interested in.
     </p>
-    <ul>
-      <li>a short motivation letter</li>
-      <li>your CV</li>
-      <li>academic transcripts</li>
-    </ul>
 
-    <p>
-      Email: <a href="mailto:mendez@vki.ac.be">mendez@vki.ac.be</a>
-    </p>
+    <hr />
+
+    <h2>Open topics</h2>
+
+    <!-- =========================
+         PROPOSAL 1
+         ========================= -->
+    <section class="join-proposal">
+      <h3>Proposal 1: Non-Intrusive Diagnosis of Interface Waves in Liquid Metal Coatings Using Image Velocimetry and RBF-Based Reconstruction</h3>
+
+      <h4>Context &amp; Problem</h4>
+      <p>
+        Industrial liquid metal coating processes are highly sensitive to interface instabilities, which can severely degrade
+        coating quality. To address this, VKI is developing <strong>non-intrusive, real-time sensing techniques</strong> to detect
+        and characterize interface waves within these flows.
+      </p>
+
+      <h4>Methodology</h4>
+      <p>
+        This thesis will refine a diagnostic approach combining <strong>real-time image velocimetry</strong> with
+        <strong>Radial Basis Function (RBF)</strong> interface reconstruction algorithms. Building on encouraging preliminary results,
+        the student will improve the robustness of the reconstruction procedure and conduct an extensive validation campaign in
+        the <strong>AmeLie</strong> experimental facility.
+      </p>
+
+      <h4>Expected Outcomes</h4>
+      <p>
+        The project will bridge experimental data processing and algorithm development. The results will provide a more accurate
+        tool for real-time monitoring, with direct applications in industrial coating optimization.
+      </p>
+    </section>
+
+    <hr />
+
+    <!-- =========================
+         PROPOSAL 2
+         ========================= -->
+    <section class="join-proposal">
+      <h3>Proposal 2: Experimental Investigation of Motion Control in Semi-Submersible Floating Wind Turbine Platforms</h3>
+
+      <h4>Context &amp; Problem</h4>
+      <p>
+        Floating wind turbines are essential for deep-water energy harvesting, yet they face significant stability challenges.
+        Platform oscillations induced by wave loading can adversely affect turbine performance and structural integrity.
+        There is a critical need for control strategies that mitigate these motions without interfering with the turbine’s aerodynamics.
+      </p>
+
+      <h4>Methodology</h4>
+      <p>
+        The study utilizes a scaled semi-submersible floater equipped with <strong>water-filled chambers</strong>.
+        By actively adjusting internal water levels via pumps, <strong>tunable damping</strong> is introduced to counteract pitch motions.
+        The student will design and integrate wave/motion sensors, manage real-time data acquisition, and develop closed-loop control
+        strategies to regulate internal fluid distribution.
+      </p>
+
+      <h4>Expected Outcomes</h4>
+      <p>
+        The project will demonstrate the feasibility of decoupling hydrodynamic stabilization from aerodynamic control.
+        The findings will provide practical insights into improving the stability and structural longevity of offshore floating wind platforms.
+      </p>
+    </section>
+
+    <hr />
+
+    <!-- =========================
+         PROPOSAL 3
+         ========================= -->
+    <section class="join-proposal">
+      <h3>Proposal 3: Low-Order Dynamic Modeling of Variable-Pitch Propellers under Rapid RPM and Pitch Transients</h3>
+
+      <h4>Context &amp; Problem</h4>
+      <p>
+        The next generation of Unmanned Aerial Vehicles (UAVs) requires enhanced agility and efficiency.
+        Variable-Pitch Propellers (VPP) offer a solution by allowing drones to adapt their effective angle of attack to varying flight conditions.
+        However, controlling these systems during fast maneuvers is difficult due to the complex, transient aerodynamic behavior that occurs when both
+        RPM and blade pitch change simultaneously.
+      </p>
+
+      <h4>Methodology</h4>
+      <p>
+        This project aims to develop a <strong>low-order dynamic model</strong> of a VPP. Building on existing <strong>Wiener-structure</strong> models,
+        the student will characterize the inertial, aerodynamic, and actuator-induced delays that dominate transient thrust.
+        Experimental data will be collected from rapid step and ramp changes in VKI facilities to parameterize the model and capture
+        nonlinear coupling effects between control inputs.
+      </p>
+
+      <h4>Expected Outcomes</h4>
+      <p>
+        The work will result in a validated, reduced-order model suitable for real-time flight controllers.
+        This will enable more aggressive UAV maneuvers and optimized energy consumption by providing a precise mathematical framework for transient VPP performance.
+      </p>
+    </section>
+
   </article>
 </main>
 
