--- a/index.html
+++ b/index.html
@@ -46,25 +46,31 @@
         />
       </div>
 
-      <div class="intro-text">
-        <p>
-          <strong>Hello!</strong> I am Miguel Alfonso Mendez and I am an Associate Professor at the
-          <a href="https://www.vki.ac.be/" target="_blank" rel="noopener">
-            von Karman Institute for Fluid Dynamics (VKI)
-          </a>.
-          Here I teach differential equations for fluid mechanics, signal processing, and
-          experimental methods at the Research Master program (Master after Master) in fluid
-          dynamics. My research interest includes engineering modeling of fluid flows,
-          experimental fluid mechanics, data-driven modal analysis, flow control, inverse
-          problems, and machine learning.
-        </p>
+     <div class="intro-text">
+  <p>
+    <strong>Hello!</strong> I am Miguel Alfonso Mendez, Associate Professor at the
+    <a href="https://www.vki.ac.be/" target="_blank" rel="noopener">
+      von Karman Institute for Fluid Dynamics (VKI)
+    </a>.
+    At VKI, I teach differential equations for fluid mechanics, signal processing, and
+    experimental methods within the Research Master program (Master after Master) in fluid dynamics.
+    </p>
 
-        <p>
-          Currently, I am supervising several Ph.D. theses in these fields and I am developing
-          two new courses dedicated to machine learning for fluid dynamics. This website
-          collects some material about my courses, upcoming events, ongoing projects, and
-          publications.
-        </p>
+  <p>
+    I lead the <strong>ML4F — Machine Learning for Fluid Systems</strong> research expertise group at VKI.
+    ML4F focuses on the development of <em>hybrid physics–data methodologies</em> for modeling,
+    identification, and control of complex fluid and thermo-fluid systems.
+    Core activities include data assimilation and digital twinning, reduced-order modeling,
+    physics-informed and physics-constrained learning, and learning-based control, with strong
+    links to experiments and real-time applications.
+  </p>
+
+  <p>
+    This website collects material related to our research and teaching activities, including
+    courses, ongoing projects, events, publications, and opportunities for students and collaborators.
+  </p>
+</div>
+
 
         
 <div class="profile-links">
