--- a/projects.html
+++ b/projects.html
@@ -33,20 +33,41 @@
 <main class="container">
   <article class="content">
 
-    <h1>Projects and Students</h1>
+<h1>ML4F — Projects and Students</h1>
 
 <p>
-  My team is composed of a diverse group of researchers focused on experimental fluid mechanics, 
-  data-driven modeling, flow control, cryogenics, and machine learning for engineering systems. 
-  Our projects are primarily built around the thesis work of our students at the 
-  <a href="https://www.vki.ac.be/index.php/academics" target="_blank">von Karman Institute (VKI)</a>, 
-  encompassing three distinct tracks: <strong>PhD candidates</strong> (both in-house and visiting), 
-  postgraduate <strong>Research Master students</strong>, and participants in the 
-  <strong>Short Training Program</strong>. This latter track is specifically designed for 
-  Master’s students from across Europe who join us for three to six months to complete their 
-  degree thesis under our co-supervision. All research is conducted at VKI in close 
-  collaboration with a broad network of European universities and research centers.
+  The <strong>ML4F — Machine Learning for Fluid Systems</strong> research expertise group at the
+  <a href="https://www.vki.ac.be/index.php/academics" target="_blank" rel="noopener">
+    von Karman Institute for Fluid Dynamics (VKI)
+  </a>
+  brings together experimentalists, modelers, and data scientists working on
+  <em>hybrid physics–data approaches</em> for complex fluid and thermo-fluid systems.
+  Our activities span experimental fluid mechanics, data assimilation and digital twinning,
+  reduced-order modeling, flow control, cryogenics, and learning-based system identification.
 </p>
+
+<p>
+  Most projects within ML4F are structured around the thesis work of students and early-career
+  researchers, following three main tracks:
+  <strong>PhD candidates</strong> (both in-house and visiting),
+  postgraduate <strong>Research Master (RM)</strong> students, and participants in the
+  <strong>Short Training Program (STP)</strong>.
+  RM and STP projects typically involve Master’s students from across Europe who join VKI for
+  periods ranging from three to six months, often in the framework of Erasmus or equivalent
+  exchange programs. All research is conducted at VKI and embedded in a broad network of
+  European universities, research institutes, and laboratories.
+</p>
+
+<p>
+  The group’s activities are supported by a balanced mix of funding sources.
+  Approximately <strong>70% of our research is funded through competitive public grants</strong>,
+  including Belgian funding schemes, European programs, and ERC support,
+  while the remaining <strong>30% comes from direct industrial collaborations</strong>.
+  We actively welcome new partnerships with industry, particularly for projects involving
+  experimental validation, real-time monitoring, digital twins, and control-oriented modeling
+  of fluid systems.
+</p>
+
 
     <!-- ===================================================== -->
     <h2>PhD Students</h2>
@@ -171,7 +192,7 @@
       <strong>Marques, P.</strong> (2021–2025)<br>
       <em>Thermo-fluid dynamics of cryogenic liquid storage: modelling and experiments</em>.<br>
       PhD Thesis at Université libre de Bruxelles (ULB).<br>
-      Co-supervised with Prof. B. Scheid and Dr. A. Simonini. Supported by FRIA.
+      Co-supervised with Prof. B. Scheid and Dr. A. Simonini. Supported by FRIA and industrial projects.
     </div>
   </li>
 
@@ -200,7 +221,7 @@
     <div class="phd-info">
       <strong>Barreiro, D.</strong> (2019–2023)<br>
       <em>Numerical models for the simulation of gas-liquid flows in the galvanization process, PhD Thesis at UDC, University of A Coruña, Spain, co-supervised with Prof. A. Gosset. 
-        Supported by Industrial projects.
+        Supported by industrial projects.
     </div>
   </li>
   
@@ -223,7 +244,6 @@
       Co-supervised with Prof. D. Seveno and Prof. J. Steelant. Supported by FWO and industrial projects.
     </div>
   </li>
-
 
 
 
