--- a/projects.html
+++ b/projects.html
@@ -30,12 +30,17 @@
   </div>
 </header>
 
+
 <main class="container">
   <article class="content">
 
-<h1>ML4F — Projects and Students</h1>
+    <h1>ML4F — Projects and Students</h1>
 
-<p>
+    <section class="ml4f-intro">
+      <figure class="ml4f-logo">
+        <img src="assets/img/logo_ML4F.png" alt="ML4F — Machine Learning for Fluid Systems logo">
+      </figure>
+      
   The <strong>ML4F — Machine Learning for Fluid Systems</strong> research expertise group at the
   <a href="https://www.vki.ac.be/index.php/academics" target="_blank" rel="noopener">
     von Karman Institute for Fluid Dynamics (VKI)
@@ -67,6 +72,8 @@
   experimental validation, real-time monitoring, digital twins, and control-oriented modeling
   of fluid systems.
 </p>
+
+</section>
 
 
     <!-- ===================================================== -->
@@ -523,8 +530,7 @@
     <h2>Short Training Programme (STP) and Undergraduate Projects</h2>
 
     <p>
-      The following students completed Short Training Programme (STP), Advanced Research Orientation (ARO),
-      or undergraduate projects under my supervision or co-supervision.
+      The following students completed Short Training Programme (STP) under my supervision or co-supervision.
     </p>
 
 <h3>Short Training Program (STP)</h3>
