--- a/media.html
+++ b/media.html
@@ -22,7 +22,7 @@
       <a href="cv-bio.html">CV and Bio</a>
       <a href="events.html">Events</a>
       <a class="active" href="media.html">Media</a>
-      <a href="join.html">Join Us !</a>
+      <a href="join.html">Join us !</a>
     </nav>
   </div>
 </header>
