--- a/publications.html
+++ b/publications.html
@@ -25,7 +25,7 @@
       <a href="events.html">Events</a>
       <a href="media.html">Media</a>
 
-      <a href="join.html">Join Us !</a>
+      <a href="join.html">Join us !</a>
     </nav>
   </div>
 </header>
