--- a/invitedtalks.html
+++ b/invitedtalks.html
@@ -20,7 +20,7 @@
     <nav class="nav">
       <a href="index.html">Home&amp;News</a>
       <a href="publications.html">Publications</a>
-      <a href="projects.html">Projects/Students</a>
+      <a href="projects_ml4f.html">Projects/Students</a>
       <a href="teaching.html">Teaching</a>
 
       <a class="active" href="invitedtalks.html">Invited Talks/Lectures</a>
