--- a/projects_ml4f.html
+++ b/projects_ml4f.html
@@ -16,7 +16,7 @@
     <nav class="nav">
       <a href="index.html">Home&amp;News</a>
       <a href="publications.html">Publications</a>
-      <a class="active" href="projects.html">Projects/Students</a>
+      <a class="active" href="projects_ml4f.html">Projects/Students</a>
       <a href="teaching.html">Teaching</a>
 
       <a href="invitedtalks.html">Invited Talks/Lectures</a>
