--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
     <a href="https://www.vki.ac.be/" target="_blank" rel="noopener">
       von Karman Institute for Fluid Dynamics (VKI)
     </a>.
-    At VKI, I teach differential equations for fluid mechanics, signal processing, and
-    experimental methods within the Research Master program (Master after Master) in fluid dynamics.
+    At VKI, I teach differential equations for fluid mechanics, signal processing, experimental methods and machine learning within the Research Master program (Master after Master) in fluid dynamics.
     </p>
 
   <p>
