--- a/index.html
+++ b/index.html
@@ -52,12 +52,11 @@
     <a href="https://www.vki.ac.be/" target="_blank" rel="noopener">
       von Karman Institute for Fluid Dynamics (VKI)
     </a>.
-    At VKI, I teach differential equations for fluid mechanics, signal processing, experimental methods and machine learning within the Research Master program (Master after Master) in fluid dynamics.
+Within the Institute’s postgraduate Research Master (Master-after-Master), I teach differential equations, signal processing, experimental methods, and machine learning applied to fluid dynamics.
     </p>
 
   <p>
-    I lead the <strong>ML4F — Machine Learning for Fluid Systems</strong> research expertise group at VKI.
-    ML4F focuses on the development of <em>hybrid physics–data methodologies</em> for modeling,
+    I also lead the <strong>ML4F — Machine Learning for Fluid Systems</strong> research expertise group, which focuses on the development of <em>hybrid physics–data methodologies</em> for modeling,
     identification, and control of complex fluid and thermo-fluid systems.
     Core activities include data assimilation and digital twinning, reduced-order modeling,
     physics-informed and physics-constrained learning, and learning-based control, with strong
