--- a/projects_ml4f.html
+++ b/projects_ml4f.html
@@ -42,10 +42,7 @@
       </figure>
       
   The <strong>ML4F — Machine Learning for Fluid Systems</strong> research expertise group at the
-  <a href="https://www.vki.ac.be/index.php/academics" target="_blank" rel="noopener">
-    von Karman Institute for Fluid Dynamics (VKI)
-  </a>
-  brings together experimentalists, modelers, and data scientists working on
+  VKI brings together experimentalists, modelers, and data scientists working on
   <em>hybrid physics–data approaches</em> for complex fluid and thermo-fluid systems.
   Our activities span experimental fluid mechanics, data assimilation and digital twinning,
   reduced-order modeling, flow control, cryogenics, and learning-based system identification.
@@ -53,7 +50,9 @@
 
 <p>
   Most projects within ML4F are structured around the thesis work of students and early-career
-  researchers, following three main tracks:
+  researchers, following three main tracks available at  <a href="https://www.vki.ac.be/index.php/academics" target="_blank" rel="noopener">
+   the von Karman Institute for Fluid Dynamics (VKI):
+  </a>
   <strong>PhD candidates</strong> (both in-house and visiting),
   postgraduate <strong>Research Master (RM)</strong> students, and participants in the
   <strong>Short Training Program (STP)</strong>.
