--- a/projects_ml4f.html
+++ b/projects_ml4f.html
@@ -16,7 +16,7 @@
     <nav class="nav">
       <a href="index.html">Home&amp;News</a>
       <a href="publications.html">Publications</a>
-      <a class="active" href="projects_ml4f.html">Projects/Students</a>
+      <a class="active" href="projects_ml4f.html">Projects/Team</a>
       <a href="teaching.html">Teaching</a>
 
       <a href="invitedtalks.html">Invited Talks/Lectures</a>
@@ -34,7 +34,7 @@
 <main class="container">
   <article class="content">
 
-    <h1>ML4F — Projects and Students</h1>
+    <h1>ML4F — Projects and Team</h1>
 
     <section class="ml4f-intro">
       <figure class="ml4f-logo">
