--- a/teaching.html
+++ b/teaching.html
@@ -16,7 +16,7 @@
     <nav class="nav">
       <a href="index.html">Home&amp;News</a>
       <a href="publications.html">Publications</a>
-      <a href="projects_ml4f.html">Projects/Students</a>
+      <a href="projects_ml4f.html">Projects/Team</a>
       <a class="active" href="teaching.html">Teaching</a>
 
       <a href="invitedtalks.html">Invited Talks/Lectures</a>
