--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@ Within the Institute’s postgraduate Research Master (Master-after-Master), I t
     links to experiments and real-time applications.
   </p>
 
+<p>Since 2025, I have been a Visiting Professor at both ULB (Aéro-thermo-mécanique Department) and Universidad Carlos III de Madrid (Aerospace Engineering Department) 
+
+
+
+</p>
+
   <p>
     This website collects material related to our research and teaching activities, including
     courses, ongoing projects, events, publications, and opportunities for students and collaborators.
