--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Within the Institute’s postgraduate Research Master (Master-after-Master), I t
     links to experiments and real-time applications.
   </p>
 
-<p>Since 2025, I have been a Visiting Professor at both ULB (Aéro-thermo-mécanique Department) and Universidad Carlos III de Madrid (Aerospace Engineering Department) 
+<p>Since 2025, I have been a Visiting Professor at both ULB (Aéro-thermo-mécanique Department) and Universidad Carlos III de Madrid (Aerospace Engineering Department). 
 
 
 
